--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <div class="col text-center">
                     <div class="py-4">
                         <h2 >TryLab</h2>
-                        <p>Copyright &copy:2020</p>
+                        <p>Copyright &copy:2020  Sakil Mia</p>
                         <button class="btn btn-primary" data-toggle="modal" data-target="#contactModal">Contact Us</button>
                     </div>
                 </div>
